Closed
Bug 47843
Opened 25 years ago
Closed 25 years ago
style overflow: scroll crashes
Categories
(Core :: Layout, defect, P1)
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: gabriel, Assigned: waterson)
References
()
Details
(Keywords: crash, platform-parity, testcase, Whiteboard: [nsbeta3+] FIX IN HAND)
Attachments
(4 files)
Linux build 2000080505.
http://www.gigabeat.com
Mozilla starts loading and then freezes totally.
Comment 1•25 years ago
|
||
Yes, it does.
Comment 2•25 years ago
|
||
WFM WinMe build 2000080208, but is rendered stupid...
Comment 3•25 years ago
|
||
I see the weird layout too, but no freeze or crash. I have made a testcase for
the layout bug and hopefully it shows the freeze problem too (on Linux.)
The layout problem seems to be caused by this style rule:
BODY {overflow:scroll;}
Comment 4•25 years ago
|
||
Comment 6•25 years ago
|
||
Test case freezes on linux build 080720, but no crash accur.
Comment 8•25 years ago
|
||
Minimal, HTML 4.01 Strict testcase is attached. Bug is also apparent with
Transitional DTD. The problem is the overflow: scroll style declaration.
Reassigning to style system.
Assignee: asa → pierre
Component: Browser-General → Style System
QA Contact: doronr → chrisd
Comment 9•25 years ago
|
||
Updated•25 years ago
|
Summary: Mozilla freezes on this site → style overflow: scroll crashes
Comment 10•25 years ago
|
||
minimal testcase works (freezes) on linux build 080720.
Comment 11•25 years ago
|
||
This is WORKSFORME on Windows 2000, build 6.0.18.2000080908.
Is this a pp bug?
Keywords: nsbeta3
Comment 12•25 years ago
|
||
No crash for me either. Reassigned to pavlov to investigate on Linux.
gabriel@: could you attach a stack trace? Thanks.
Assignee: pierre → pavlov
| Reporter | ||
Comment 13•25 years ago
|
||
Comment 14•25 years ago
|
||
reassigning to waterson, per pav (who thinks this is a layout problem)
Assignee: pavlov → waterson
| Assignee | ||
Comment 15•25 years ago
|
||
Crasher. Marking [nsbeta3+]. Layout is somehow getting wedged in an infinite
loop (Linux only!) on a ridiculously simple test case. I doubt this is a
layout-specific problem, but I'll do initial investigation.
Status: NEW → ASSIGNED
Component: Style System → Layout
Keywords: pp
Priority: P3 → P1
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
| Assignee | ||
Comment 16•25 years ago
|
||
Because the body is set to have "overflow: scroll", the nsGfxScrollFrameInner
decides that it should turn its scrollbars on in the initial reflow.
To do this, it sets an attribute which makes the scrollbar become visible. This
triggers a reflow, and causes us to re-enter layout while doing the initial
reflow. From here, all hell breaks loose.
I think that the problem is that the pres shell doesn't think that it's
reflowing while it's doing the initial reflow (because nobody sets
mIsReflowing), and this causes it to merrily process the reflow commands.
Setting mIsReflowing before reflowing the root frame in
nsPresShell::InitialReflow() seems to fix the problem. Will this have other bad
side effects? It seems to pass initial sniff tests...
| Assignee | ||
Comment 17•25 years ago
|
||
| Assignee | ||
Updated•25 years ago
|
Whiteboard: [nsbeta3+] → [nsbeta3+] FIX IN HAND
| Assignee | ||
Comment 18•25 years ago
|
||
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 19•25 years ago
|
||
No problem on the 8/28 build on Linux. Verifying bug fixed.
Status: RESOLVED → VERIFIED
Comment 20•17 years ago
|
||
Crashtest added as part of http://hg.mozilla.org/mozilla-central/rev/5a6def05ccbc
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•