Bug 47843. Be sure to set nsPresShell's mIsReflowing during initial reflow to avoid re-entrancy. r=nisheeth